@@ -125,9 +125,11 @@
 
 	</select>
 	
+	<span class='toolTip' title="This feature is available to give you an idea of what your message will look like on a specific device. There may be device-specific display differences. Also, the pixel density on phones is higher than a computer, so the phone around your content is enlarged to reflect this.">?</span>
+	
 	<button data-app-event='admin_templateEditor|templateEditorIframeRotateExec'>Rotate Orientation</button>
 	
-	<p class='hint'>This feature is available to give you an idea of what your message will look like on a specific device. There may be device-specific display differences. Also, the pixel density on phones is higher than a computer, so the phone around your content is enlarged to reflect this.</p>
+	
 	</div>
 </section>
 
